integrates\fix(front): #6686 table-btn alignment
- Delete negative margin of table-btn class
- Delete .w-100 copy

--- a/integrates/front/src/components/Table/index.css
+++ b/integrates/front/src/components/Table/index.css
@@ -1,7 +1,3 @@
-:local .wFull {
-  width: 100%;
-}
-
 :local .searchBar {
   composes: form-control from "../../utils/forms/index.css";
   height: 30px;
